--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,20 +1,21 @@
 <%- include('partials/header') %>
 
 <div>
-    <h1><%= kindofDay %></h1>
+    <h1 class="date"><%= kindofDay %></h1>
+
+    <div class="list-box">
     
     <%todosList.map(item =>{%>
         <div class="item">
             <input type="checkbox" >
-            <h3><%= item %></h3>
+            <p><%= item %></p>
         </div>               
     <%});%>
-    <form action="/" method="POST">
-        <div class="form-group">
-            <input type="text" class="form-control" name="todo">
-        </div>
-        <button type="submit" class="btn btn-dark">Submit</button>
-      </form>
+    <form class="item" action="/" method="POST">
+        <input type="text" class="item-input" name="todo" placeholder="New Item" autocomplete="off" required>
+        <button type="submit" class="submit" class="btn btn-dark">+</button>
+    </form>
+    </div>
 </div>
 
-<%- include('partials/header') %>
+<%- include('partials/footer') %>
