--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,24 +1,20 @@
 <%- include('partials/header') %>
 
-<div>
-  <h1>Login</h1>
-
-  <div class="row">
-
-          <!-- Makes POST request to /login route -->
-          <form action="/login" method="POST">
-            <div class="form-group">
-              <label for="email">Email</label>
-              <input type="email" class="form-control" name="username">
-            </div>
-            <div class="form-group">
-              <label for="password">Password</label>
-              <input type="password" class="form-control" name="password">
-            </div>
-            <button type="submit" class="btn btn-dark">Login</button>
-          </form>
-
-    </div>
+<div class="box">
+  <h1 class="heading">Login</h1>
+  
+  <div class="box-2">
+    <!-- Makes POST request to /login route -->
+    <form action="/login" method="POST">
+      <input type="email" class="form-control" name="username" placeholder="Email id" required>
+      <br />
+      <input type="password" class="form-control" name="password" placeholder="Password" required>
+      <br />
+      <button type="submit" class="btn btn-dark btn-lg btn-block">Login</button>
+      <hr />
+      <a href="/register"><button type="button" class="btn btn-outline-dark btn-lg btn-block">New User SignUp</button></a>
+    </form>
+  </div>
 </div>
 
 <%- include('partials/footer') %>
