--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,6 +4,19 @@
 <head>
   <meta charset="utf-8">
   <title>Keeper App</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+   integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+   <link font-family: "Montserrat", sans-serif;
+    href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap"
+    rel="stylesheet" />
+   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+    <!-- Image and text -->
+<nav class="navbar navbar-dark bg-dark">
+    <a class="navbar-brand" href="/">
+      <img src="https://www.gstatic.com/images/branding/product/1x/keep_2020q4_48dp.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+      Keeper App
+    </a>
+  </nav>
